tests/cases/compiler-development/artifact/errors/syntax-recovery-item-macro-token-tree.ari
broken!(value
fn after() -> i64 {
  return 7;
}
